# cursus

./: .gitignore  .readthedocs.yaml  Agent.md  CHANGELOG.md  MANIFEST.in  MOCK_FACTORY_CONSOLIDATION_SUMMARY.md  PACKAGE_SETUP.md  README.md  catalog_index.json  check_pypi_name.sh  count_lines.sh  demo_config.ipynb  demo_config_widget.ipynb  demo_interactive_runtime_testing_factory.ipynb  demo_interactive_script_testing.ipynb  demo_interactive_script_testing_refactored.ipynb  demo_pipeline.ipynb  demo_script_validation.ipynb  example_enhanced_config_widget.ipynb  fix_alignment_validation_scripts.py  fix_project_root_references.py  generate_analysis_report.sh  interactive_config_demo.ipynb  migrate_pipeline_testing.py  migrate_test_imports.py  pyproject.toml  requirements.txt  run_tests.sh  test_phase3_optimizations.py  test_phase4_implementation.py  test_phase5_implementation.py
.github/workflows/: docs.yml
demo/: demo_config.ipynb  demo_pipeline.ipynb  test_execution_vs_definition_location.ipynb  test_paths_debug.py  test_step_catalog_discovery.ipynb  test_step_catalog_discovery_exp2.ipynb
developer_workspaces/: README.md
development/: README.md
doc/: package_name_proposals.md
dockers/pytorch_bsm_ext/: inference.py  train.py
dockers/pytorch_rnr/: pytorch_inference.py  pytorch_model_eval.py  pytorch_training.py
dockers/pytorch_temporal_self_attention/: train.py
dockers/rnr_pytorch_bedrock/: demo_pipeline.ipynb  pytorch_inference.py  pytorch_training.py
dockers/tsa/: README.md  eu_tsa_model_mods_launch.ipynb  eu_tsa_sq_model.py  na_tsa_model_mods_launch.ipynb  na_tsa_sq_model.py
dockers/xgboost_atoz/: xgboost_inference.py  xgboost_model_evaluation.py  xgboost_training.py
dockers/xgboost_pda/: xgboost_model_evaluation.py
docs/: Makefile  cli.rst  conf.py  index.rst
docs/_ext/: gen_reference.py
docs/_static/: custom.css
docs/_templates/: module.rst
docs/api/: api.rst  cli.rst  core.rst  index.rst  pipeline_catalog.rst  registry.rst  steps.rst  validation.rst  workspace.rst
docs/concepts/: architecture.md  config_system.md  dag_and_compilation.md  dependency_resolution.md  design_principles.md  execution_documents.md  index.md  mcp_surface.md  path_resolution.md  pipeline_catalog.md  registry_and_discovery.md  step_interfaces.md  step_packs.md  validation.md
docs/getting_started/: core_concepts.md  index.md  installation.md  quickstart.md
docs/guides/: compile_and_deploy.md  define_a_step_pack.md  generate_configs.md  index.md  inspect_catalog_and_registry.md  quickstart.rst  validate_a_pipeline.md
docs/images/: .gitkeep
docs/migration/: index.md  to_v2.md
docs/reference/: index.md
docs/tutorials/: agentic.md  author_a_step.md  first_pipeline.md  index.md  pipeline_from_catalog.md  step_pack.md
pipeline_config/config_NA_xgboost_AtoZ_v2/: config_NA_xgboost_AtoZ.json  config_NA_xgboost_AtoZ_correct.json  execute_doc_lukexie-AtoZ-xgboost-NA_2.0.0.json  hyperparameters_NA_xgboost_correct.json  test_output_execution_document.json
project_pytorch_bsm_ext/docker/: pytorch_training.py
project_xgboost_atoz/scripts/: xgboost_model_evaluation.py
projects/ab_lightgbm/: ab_lightgbm_pipeline.py  demo_config_widget.ipynb  demo_pipeline.ipynb
projects/atoz_xgboost/: atoz_xgboost_pipeline.py  demo_config_widget.ipynb  demo_pipeline.ipynb  demo_script_validation.ipynb
projects/bsm_pytorch/: bsm_pytorch.py
projects/munged_address_pytorch/: generate_config_na.py  munged_address_pytorch_na.py
projects/names3risk/: Config  dataset.py  fetch_data.py  logger.py  tokenizer.py  upload.ipynb
projects/names3risk_legacy/: dataset.py  digital_polars_utils.py  fetch_data.py  lstm2risk.py  requirements.txt  tokenizer.py  train.py  transformer2risk.py  upload.ipynb
projects/names3risk_pytorch/: analyze_packaged_model.ipynb  demo_config_widget_percentile.ipynb  names3risk_pytorch_na.py
projects/rnr_pytorch_bedrock/: debug_json_parsing.py  demo_config_widget.ipynb  demo_config_widget_dummy_bedrock.ipynb  (+22 more)
slipbox/: README.md
test/: COVERAGE_ANALYSIS_GUIDE.md  README_TEST_COVERAGE.md  advanced_coverage_analysis.json  analyze_test_coverage.py  comprehensive_coverage_analysis.json  conftest.py  core_coverage_analysis.json  core_coverage_detailed_report.py  core_test_report.json
test_cli_all_reports/: currency_conversion_alignment_report.html  currency_conversion_alignment_report.json  dummy_training_alignment_report.html  dummy_training_alignment_report.json  model_calibration_alignment_report.html  model_calibration_alignment_report.json  package_alignment_report.html  package_alignment_report.json  payload_alignment_report.html  payload_alignment_report.json  risk_table_mapping_alignment_report.html  risk_table_mapping_alignment_report.json  tabular_preprocessing_alignment_report.html  tabular_preprocessing_alignment_report.json  validation_summary.json  xgboost_model_evaluation_alignment_report.html  xgboost_model_evaluation_alignment_report.json
test_cli_fixed_reports/: currency_conversion_alignment_report.json  dummy_training_alignment_report.json  model_calibration_alignment_report.json  package_alignment_report.json  payload_alignment_report.json  risk_table_mapping_alignment_report.json  tabular_preprocessing_alignment_report.json  validation_summary.json  xgboost_model_evaluation_alignment_report.json
test_cli_reports/: payload_alignment_report.json
test_reports/: currency_conversion_alignment_report.html  currency_conversion_alignment_report.json  dummy_training_alignment_report.html  dummy_training_alignment_report.json  mims_payload_alignment_report.json  model_calibration_alignment_report.html  model_calibration_alignment_report.json  package_alignment_report.html  package_alignment_report.json  payload_alignment_report.json  risk_table_mapping_alignment_report.html  risk_table_mapping_alignment_report.json  tabular_preprocessing_alignment_report.html  tabular_preprocessing_alignment_report.json  validation_summary.json  xgboost_model_evaluation_alignment_report.html  xgboost_model_evaluation_alignment_report.json
tests/: conftest.py
(+3223 files in other folders)
