[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursus"
dynamic = ["version"]
description = "Automatic SageMaker Pipeline Generation from DAG Specifications"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Tianpei Xie", email = "unidoctor@gmail.com"}
]
maintainers = [
    {name = "Tianpei Xie", email = "unidoctor@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
keywords = [
    "sagemaker", 
    "pipeline", 
    "dag", 
    "machine-learning", 
    "aws", 
    "automation",
    "mlops",
    "data-science",
    "workflow",
    "orchestration"
]
requires-python = ">=3.9"

# Core dependencies (minimal for basic functionality)
dependencies = [
    "boto3>=1.39.0",
    "botocore>=1.39.0",
    "sagemaker>=2.248.0,<3",
    "pydantic>=2.11.0,<3",
    "PyYAML>=6.0.0",
    "networkx>=2.8.0",
    "click>=8.1.0",
    "pytz",
]

[project.optional-dependencies]
# Data processing utilities (used in cursus/processing/ module and scripts)
processing = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
]
# ML Framework dependencies
pytorch = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "lightning>=2.0.0",
]
gbm = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
]
nlp = [
    "transformers>=4.30.0",
    "tokenizers>=0.15.0",
]
# Jupyter notebook integration dependencies
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "plotly>=5.0.0",
    "nbformat>=5.0.0",
    "jinja2>=3.0.0",
    "seaborn>=0.12.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.0.0",
]
# Visualization dependencies (used in scripts for plotting)
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
# Documentation toolchain — see docs/conf.py and
# slipbox/2_project_planning/2026-07-05_comprehensive_code_documentation_publishing_plan.md
docs = [
    "sphinx>=7.2,<9",
    "furo>=2024.8.6",           # theme
    "myst-parser>=2.0.0",       # Markdown (MyST) authoring
    "linkify-it-py>=2.0",       # required by the MyST "linkify" extension enabled in conf.py
    "sphinx-click>=6.0",        # CLI reference from the live Click app
    "jinja2>=3.1",              # used by docs/_ext/gen_reference.py
    "pyyaml>=6.0",              # step-interface catalog generation
]
# MCP (Model Context Protocol) server — exposes the 70-tool cursus surface to AI
# assistants (Claude, Cursor, Kiro, ...) over stdio. The adapter (cursus/mcp/server.py)
# imports these lazily, so a plain `pip install cursus` (compile pipelines only) never
# pulls the MCP SDK. Install `cursus[mcp]`, then run `cursus mcp serve` or
# `python -m cursus.mcp.server` (or the `cursus-mcp` console script).
mcp = [
    # >=1.2.0: the Server(name, version=...) kwarg used by cursus.mcp.server was added in
    # mcp 1.2.0 (1.0.x/1.1.x raise TypeError). <2: the low-level Server API is 1.x-only.
    "mcp>=1.2.0,<2",
    "anyio>=4.0.0",
]
# Full installation (all user-facing optional dependencies)
all = [
    "cursus[pytorch,gbm,nlp,processing,jupyter,viz,mcp]"
]

[project.scripts]
cursus = "cursus.cli:main"
# Stable launch command for the stdio MCP server (equivalent to `python -m cursus.mcp.server`
# and `cursus mcp serve`). Requires the `mcp` extra above.
cursus-mcp = "cursus.mcp.server:main"

[project.urls]
Homepage = "https://github.com/TianpeiLuke/cursus"
Documentation = "https://cursus.readthedocs.io/"
Repository = "https://github.com/TianpeiLuke/cursus"
Issues = "https://github.com/TianpeiLuke/cursus/issues"
Changelog = "https://github.com/TianpeiLuke/cursus/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cursus*"]

[tool.setuptools.package-data]
# Apply to every sub-package so non-.py data ships in the wheel. The unified
# step interfaces (steps/interfaces/*.step.yaml), the YAML step registry
# (registry/step_names.yaml), and the declarative pipeline catalog
# (pipeline_catalog/shared_dags/**/*.dag.json + catalog_index.json) are all
# load-bearing at runtime and live in nested sub-packages, so a top-level-only
# "cursus" glob would silently drop them.
"*" = ["py.typed", "*.yaml", "*.yml", "*.json"]
# The shipped agent-authoring orchestrators live under mcp/workflows/ as reference/
# runnable artifacts (Claude Code dynamic-workflow scripts + README), NOT importable
# Python — so they need explicit package-data on the parent cursus.mcp package (the
# workflows dir has no __init__.py, so the "*" glob above never reaches it).
"cursus.mcp" = ["workflows/*.js", "workflows/*.md"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cursus"]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Allow forward references and reduce false positives
allow_untyped_globals = true
disable_error_code = ["name-defined", "unreachable", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "sagemaker.*",
    "boto3.*",
    "botocore.*",
    "networkx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "mods_workflow_core.*",
    "mods_workflow_helper.*",
    "secure_ai_sandbox_workflow_python_sdk.*",
]
ignore_missing_imports = true
ignore_errors = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/cursus"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
